@@ -96,7 +96,13 @@ class Ingo_Basic_Forward extends Ingo_Basic_Base
 
         Horde::startBuffer();
         $form->renderActive(
-            new Horde_Form_Renderer(array('encode_title' => false)), $this->vars, self::url(), 'post'
+            new Horde_Form_Renderer(array(
+                'encode_title' => false,
+                'varrenderer_driver' => array('ingo', 'ingo')
+            )),
+            $this->vars,
+            self::url(),
+            'post'
         );
         $this->output = Horde::endBuffer();
     }
